src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/valid/CD4AC3002.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.valid;

classdiagram CD4AC3002 {
	class A {
		String a;
	}
}