src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/invalid/CD4AC3002.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.invalid;

classdiagram CD4AC3002 {
	class A {
		String a;
		public A();
	}
	class B {
		public B(String a);
		public B(String a, int b);
	}
}